--- a/site/config.toml
+++ b/site/config.toml
@@ -13,13 +13,17 @@ theme = "zerm"
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
-# Whether to build a search index to be used later on by a JavaScript library
-build_search_index = true
-
+# Taxonomies configuration
 taxonomies = [
   { name = "categories", feed = true },
   { name = "tags", feed = true },
 ]
+
+# Whether to build a search index to be used later on by a JavaScript library
+build_search_index = true
+
+[search]
+index_format = "elasticlunr_json"
 
 [markdown]
 # Whether to do syntax highlighting
