--- a/site/config.toml
+++ b/site/config.toml
@@ -58,6 +58,7 @@ main_menu = [
   { url = "/categories", name = "categories" },
   { url = "/tags", name = "tags" },
   { url = "/projects", name = "projects" },
+  { url = "/resources", name = "resources"},
   { url = "https://github.com/sentinel1909", name = "GitHub", external = true }
 ]
 
