--- a/site/config.toml
+++ b/site/config.toml
@@ -59,7 +59,8 @@ main_menu = [
   { url = "/tags", name = "tags" },
   { url = "/projects", name = "projects" },
   { url = "/resources", name = "resources"},
-  { url = "https://github.com/sentinel1909", name = "GitHub", external = true }
+  { url = "https://github.com/sentinel1909", name = "GitHub", external = true },
+  { url = "https://query.rs", name = "query.rs", external = true }
 ]
 
 read_more = "read"
