--- a/site/config.toml
+++ b/site/config.toml
@@ -8,7 +8,7 @@ title = "jeff-mitchell.dev"
 description = "A blog mostly about Rust...mostly..."
 
 # enable the zern theme
-theme = "sentinel1909-zerm"
+theme = "zerm"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
@@ -30,10 +30,6 @@ index_format = "elasticlunr_json"
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
 hightlight_theme = "dracula"
-
-# enable RSS Feed
-generate_feed = true
-feed_filename = ["rss.xml"]
 
 # open external links in a new tab
 external_links_target_blank = true
