--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,24 @@ repository = "https://github.com/sentinel1909/crusty-rustacean-api"
 license = "MIT"
 publish = false
 
+[[bin]]
+name = "httpd"
+path = "src/bin/httpd.rs"
+
+[lib]
+name = "jeff_mitchell_dev_lib"
+path = "src/lib/lib.rs"
+
 [dependencies]
 axum = "0.7.5"
+http = "1.1.0"
 shuttle-axum = "0.47.0"
-shuttle-runtime = "0.47.0"
-tower-http = { version = "0.5.2", features = [ "fs"] }
+shuttle-runtime = { version = "0.47.0", default-features = false }
+tokio = "1.39.2"
+tower = "0.4.13"
+tower-http = { version = "0.5.2", features = [ "fs", "request-id", "trace", "util" ] }
+tracing = { version = "0.1.40", features = [ "log" ] }
+tracing-bunyan-formatter = "0.3.9"
+tracing-log = "0.2.0"
+tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
+uuid = { version = "1", features = [ "v4" ] }
