--- a/site/config.toml
+++ b/site/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://jeff-mitchell-dev.shuttleapp.rs"
+base_url = "https://jeff-mitchell.dev"
 
 # title
 title = "jeff-mitchell.dev"
