improvement: make server utilize a Shuttle service for Axum

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@
 [package]
 name = "jeff-mitchell-dev"
 authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
-version = "0.13.0"
+version = "0.14.0"
 edition = "2021"
 description = "My Zola blog, served up by Axum, hosted on Shuttle"
 readme = "README.md"
@@ -27,8 +27,9 @@ axum = "0.7.7"
 http = "1.1.0"
 shuttle-axum = "0.48.0"
 shuttle-runtime = { version = "0.48.0", default-features = false }
+tokio = { version = "1.40.0", features = [ "net" ] }
 tower = "0.5.1"
-tower-http = { version = "0.6.1", features = [ "fs", "request-id", "trace", "util" ] }
+tower-http = { version = "0.6.1", features = [ "fs", "normalize-path", "request-id", "trace", "util" ] }
 tracing = { version = "0.1.40", features = [ "log" ] }
 tracing-bunyan-formatter = "0.3.9"
 tracing-log = "0.2.0"
