--- a/Shuttle.toml
+++ b/Shuttle.toml
@@ -1,3 +1,7 @@
 # jeff-mitchell-dev Shuttle configuration
 name = "jeff-mitchell-dev"
-build_assets = ["public"]
+
+[build]
+assets = [
+  "public/*"
+]
